# Melodious

./: __init__.py  cog.py  manifest.toml  pyproject.toml  settings_schema.toml
yupxmusic3/: __init__.py  __main__.py  music.py
